--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>ICPC-Lab</title>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title></title>
+  
+  <!-- リセットCSS 読み込み -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
+  
+  <!-- style.css 読み込み -->
+  <link rel="stylesheet" href="https://gohan-desu.github.io/icpc_yuhifes/style.css">
+  
+  <!-- Google Fonts 読み込み -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <body>
-        <h1>ICPC-Lab</h1>
-    </body>
+</head>
+  
+<body>
+  
+  <header></header>
+  
+  <main></main>
+  
+  <footer>© ITcom Inc.</footer>
+  
+</body>
+
 </html>
