--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title></title>
+  <title>GameLab</title>
   
   <!-- リセットCSS 読み込み -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
@@ -21,7 +21,19 @@
   
 <body>
   
-  <header></header>
+  <header>
+    <div class="container">
+        <div class="row">
+            <a href="./" class="logo">ICPC</a>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+  </header>
   
   <main></main>
   
