--- a/index.html
+++ b/index.html
@@ -25,19 +25,35 @@
     <div class="container">
         <div class="row">
             <a href="./" class="logo">ICPC</a>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
         </div>
     </div>
-
   </header>
   
-  <main></main>
+  <main>
+    <section class="section1">
+      <div class="container">
+        <h1>GameLab</h1>
+        <p class="text">ゲームしませんか？</p>
+      </div>
+    </section>
+
+    <section class="section2">
+      <div class="container">
+        <h2>GameLabとは？</h2>
+        <hr>
+        <p class="text">雄飛祭の屋台やステージ発表<br>その待ち時間も楽しく過ごせるように</p>
+        <p class="text2">「待ち時間のお供」をコンセプトにゲーム制作を行いました！<br></p>
+      </div>
+    </section>
+  </main>
   
-  <footer>© ITcom Inc.</footer>
+  <footer>
+    <div class="container">
+      <h1>CONTUCT US</h1>
+      <p class="email">dokkyoicpc@gmail.com</p>
+      <p>Copyright© 2024 DOKKYO ICPCLab All Rights Reserved</p>
+    </div>
+  </footer>
   
 </body>
 
