--- a/index.html
+++ b/index.html
@@ -41,8 +41,42 @@
       <div class="container">
         <h2>GameLabとは？</h2>
         <hr>
-        <p class="text">雄飛祭の屋台やステージ発表<br>その待ち時間も楽しく過ごせるように</p>
-        <p class="text2">「待ち時間のお供」をコンセプトにゲーム制作を行いました！<br></p>
+        <p class="text1">「待ち時間のお供」をコンセプトにゲーム制作を行いました！<br>
+          下のボタンからゲームが遊べます！<br>
+          屋台やステージ発表の待ち時間、休憩中の空いた時間にいかがですか？</p>
+        <p class="text2"></p>
+      </div>
+    </section>
+
+    <section class="section3">
+      <div class="container">
+
+        <div class="row">
+          <div class="col">
+            <h2>Shooting!</h2>
+            <hr>
+            <p class="text">シューティングゲームです！<br>制限時間内のスコアを競い合いましょう！</p>
+            <a href="">Play</a>
+          </div>
+
+          <div class="col">
+            <img src="" width="100%" alt="shooting">
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <h2>Run!Run!Run!</h2>
+            <hr>
+            <p class="text">障害物をよけてゴールを目指しましょう！</p>
+            <a href="">Play</a>
+          </div>
+
+          <div class="col">
+            <img src="" width="100%" alt="shooting">
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
