--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="container">
         <h1>GameLab</h1>
         <p class="text">ゲームしませんか？</p>
+        <div class="filter"></div>
       </div>
     </section>
 
