--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
 
     <section class="section2">
       <div class="container">
-        <h2>GameLabとは？</h2>
-        <hr>
-        <p class="text1">「待ち時間のお供」をコンセプトにゲーム制作を行いました！<br>
-          下のボタンからゲームが遊べます！<br>
-          屋台やステージ発表の待ち時間、休憩中の空いた時間にいかがですか？</p>
+        <div class="row">
+          <h2>GameLabとは？</h2>
+          <hr>
+          <p class="text1">「待ち時間のお供」をコンセプトにゲーム制作を行いました！<br>
+            下のボタンからゲームが遊べます！<br>
+            屋台やステージ発表の待ち時間、休憩中の空いた時間にいかがですか？</p>
+        </div>
       </div>
     </section>
 
