--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <!--<div class="row">
           <div class="col">
             <h2>Run!Run!Run!</h2>
             <hr>
@@ -75,7 +75,7 @@
           <div class="col">
             <img src="" width="100%" alt="shooting">
           </div>
-        </div>
+        </div>-->
 
       </div>
     </section>
