--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="col">
-            <img src="" width="100%" alt="shooting">
+            <img src="https://gohan-desu.github.io/icpc_yuhifes/images/スクリーンショット 2024-11-01 085533.png" width="100%" alt="shooting">
           </div>
         </div>
 
