--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             <img src="https://gohan-desu.github.io/icpc_yuhifes/images/スクリーンショット 2024-11-01 085533.png" width="100%" alt="shooting">
           </div>
         </div>
-
+    <section class="section5">
+      <h2>ただいま動作確認中のため、プレイができません<br>今しばらくお待ちください</h2>
+    </section>
         <!--<div class="row">
           <div class="col">
             <h2>Run!Run!Run!</h2>
