--- a/index.html
+++ b/index.html
@@ -56,16 +56,13 @@
             <h2>Shooting!</h2>
             <hr>
             <p class="text">シューティングゲームです！<br>制限時間内のスコアを競い合いましょう！</p>
-            <a href="">Play</a>
+            <a href="https://unityroom.com/games/shooting-yuhisai1">Play</a>
           </div>
 
           <div class="col">
             <img src="https://gohan-desu.github.io/icpc_yuhifes/images/スクリーンショット 2024-11-01 085533.png" width="100%" alt="shooting">
           </div>
         </div>
-    <section class="section5">
-      <h2>ただいま動作確認中のため、プレイができません<br>今しばらくお待ちください</h2>
-    </section>
         <!--<div class="row">
           <div class="col">
             <h2>Run!Run!Run!</h2>
