--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="col">
             <h2>Shooting!</h2>
             <hr>
-            <p class="text">シューティングゲームです！<br>制限時間内のスコアを競い合いましょう！</p>
+            <p class="text">シューティングゲームです！</p>
             <a href="https://unityroom.com/games/shooting-yuhisai1">Play</a>
           </div>
 
