--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="https://gohan-desu.github.io/icpc_yuhifes/images/スクリーンショット 2024-11-01 085533.png" width="100%" alt="shooting">
           </div>
         </div>
-        <!--<div class="row">
+        <div class="row">
           <div class="col">
             <h2>Run!Run!Run!</h2>
             <hr>
@@ -74,7 +74,7 @@
           <div class="col">
             <img src="" width="100%" alt="shooting">
           </div>
-        </div>-->
+        </div>
 
       </div>
     </section>
@@ -84,7 +84,7 @@
     <div class="container">
       <h1>CONTUCT US</h1>
       <p class="email">dokkyoicpc@gmail.com</p>
-      <p>Copyright© 2024 DOKKYO ICPCLab All Rights Reserved</p>
+      <p>Copyright© 2024 DOKKYO ICPC Lab All Rigths Reserved</p>
     </div>
   </footer>
   
